--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
         if(event.target.nodeName == "IMG"){
             return false;
         }
+    });
+    $(document).bind("contextmenu",function(){
+        return false;
     })
 </script>
     
