--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
         <img src="img/8.gif" alt="">
         <img src="img/9.gif" alt="">
         <img src="img/10.gif" alt="">
+        <img src="img/11.gif" alt="">
+        <img src="img/12.gif" alt="">
+        <img src="img/13.gif" alt="">
+        <img src="img/14.gif" alt="">
+        <img src="img/15.gif" alt="">
         </div>
     </div>
 </article>
