--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
         <img src="img/13.gif" alt="">
         <img src="img/14.gif" alt="">
         <img src="img/15.gif" alt="">
+        <img src="img/16.gif" alt="">
+        <img src="img/17.gif" alt="">
+        <img src="img/18.gif" alt="">
         </div>
     </div>
 </article>
