--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
         <img src="img/20.gif" alt="">
         <img src="img/21.gif" alt="">
         <img src="img/22.gif" alt="">
+        <img src="img/23.gif" alt="">
+        <img src="img/24.gif" alt="">
+        <img src="img/25.gif" alt="">
+        <img src="img/26.gif" alt="">
+        <img src="img/27.gif" alt="">
+        <img src="img/28.gif" alt="">
+        <img src="img/29.gif" alt="">
         </div>
     </div>
 </article>
