--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
         <img src="img/27.gif" alt="">
         <img src="img/28.gif" alt="">
         <img src="img/29.gif" alt="">
+        <img src="img/30.gif" alt="">
+        <img src="img/31.gif" alt="">
+        <img src="img/32.gif" alt="">
+        <img src="img/33.gif" alt="">
+        <img src="img/34.gif" alt="">
         </div>
     </div>
 </article>
