--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
         <img src="img/32.gif" alt="">
         <img src="img/33.gif" alt="">
         <img src="img/34.gif" alt="">
+        <img src="img/35.gif" alt="">
+        <img src="img/36.gif" alt="">
+        <img src="img/37.gif" alt="">
         </div>
     </div>
 </article>
