--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
         <img src="img/35.gif" alt="">
         <img src="img/36.gif" alt="">
         <img src="img/37.gif" alt="">
+        <img src="img/38.gif" alt="">
+        <img src="img/39.gif" alt="">
+        <img src="img/40.gif" alt="">
+        <img src="img/41.gif" alt="">
+        <img src="img/42.gif" alt="">
+        <img src="img/43.gif" alt="">
         </div>
     </div>
 </article>
