--- a/index.html
+++ b/index.html
@@ -67,20 +67,33 @@
         <img src="img/43.gif" alt="">
         </div>
     </div>
+    <div class="sample2">
+       <h1>2차 완성 꾹꾹이</h1>
+       <div class="img_all">
+        <img src="img/44.gif" alt="">
+        <img src="img/45.gif" alt="">
+        <img src="img/46.gif" alt="">
+        </div>
+    </div>
 </article>
    
 <script>
     $(function() {        
         var sImg = document.querySelectorAll('.sample .img_all')
         var sImg2 = document.querySelectorAll('.sample1 .img_all')
+        var sImg3 = document.querySelectorAll('.sample2 .img_all')
             $('.sample h1').on('click',Fun);
             $('.sample1 h1').on('click',Fun2);
+        $('.sample2 h1').on('click',Fun3);
                                
             function Fun(){
                 $(sImg).toggleClass('active');
         };
         function Fun2(){
                 $(sImg2).toggleClass('active');
+        };
+        function Fun3(){
+                $(sImg3).toggleClass('active');
         };
     });
     $(window.document).on("contextmenu",function(){
