--- a/index.html
+++ b/index.html
@@ -73,6 +73,12 @@
         <img src="img/44.gif" alt="">
         <img src="img/45.gif" alt="">
         <img src="img/46.gif" alt="">
+        <img src="img/47.gif" alt="">
+        <img src="img/48.gif" alt="">
+        <img src="img/49.gif" alt="">
+        <img src="img/50.gif" alt="">
+        <img src="img/51.gif" alt="">
+        <img src="img/52.gif" alt="">
         </div>
     </div>
 </article>
