--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@
         <img src="img/50.gif" alt="">
         <img src="img/51.gif" alt="">
         <img src="img/52.gif" alt="">
+        <img src="img/53.gif" alt="">
+        <img src="img/54.gif" alt="">
+        <img src="img/55.gif" alt="">
+        <img src="img/56.gif" alt="">
         </div>
     </div>
 </article>
