--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
         <img src="img/54.gif" alt="">
         <img src="img/55.gif" alt="">
         <img src="img/56.gif" alt="">
+        <img src="img/57.gif" alt="">
+        <img src="img/58.gif" alt="">
+        <img src="img/59.gif" alt="">
+        <img src="img/60.gif" alt="">
         </div>
     </div>
 </article>
