--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
         <img src="img/58.gif" alt="">
         <img src="img/59.gif" alt="">
         <img src="img/60.gif" alt="">
+        <img src="img/61.gif" alt="">
+        <img src="img/62.gif" alt="">
+        <img src="img/63.gif" alt="">
         </div>
     </div>
 </article>
