--- a/index.html
+++ b/index.html
@@ -90,6 +90,11 @@
         <img src="img/61.gif" alt="">
         <img src="img/62.gif" alt="">
         <img src="img/63.gif" alt="">
+        <img src="img/64.gif" alt="">
+        <img src="img/65.gif" alt="">
+        <img src="img/66.gif" alt="">
+        <img src="img/67.gif" alt="">
+        <img src="img/68.gif" alt="">
         </div>
     </div>
 </article>
