--- a/index.html
+++ b/index.html
@@ -95,6 +95,10 @@
         <img src="img/66.gif" alt="">
         <img src="img/67.gif" alt="">
         <img src="img/68.gif" alt="">
+        <img src="img/69.gif" alt="">
+        <img src="img/70.gif" alt="">
+        <img src="img/71.gif" alt="">
+        <img src="img/72.gif" alt="">
         </div>
     </div>
 </article>
