--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@
         <img src="img/70.gif" alt="">
         <img src="img/71.gif" alt="">
         <img src="img/72.gif" alt="">
+        <img src="img/73.gif" alt="">
+        <img src="img/74.gif" alt="">
+        <img src="img/75.gif" alt="">
+        <img src="img/76.gif" alt="">
         </div>
     </div>
 </article>
