--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
         <img src="img/74.gif" alt="">
         <img src="img/75.gif" alt="">
         <img src="img/76.gif" alt="">
+        <img src="img/77.gif" alt="">
         </div>
     </div>
 </article>
