--- a/index.html
+++ b/index.html
@@ -90,11 +90,6 @@
         <img src="img/61.gif" alt="">
         <img src="img/62.gif" alt="">
         <img src="img/63.gif" alt="">
-        </div>
-    </div>
-    <div class="sample3">
-       <h1>3차 완성 꾹꾹이</h1>
-       <div class="img_all">
         <img src="img/64.gif" alt="">
         <img src="img/65.gif" alt="">
         <img src="img/66.gif" alt="">
@@ -103,6 +98,25 @@
         <img src="img/69.gif" alt="">
         <img src="img/70.gif" alt="">
         <img src="img/71.gif" alt="">
+        <img src="img/72.gif" alt="">
+        <img src="img/73.gif" alt="">
+        <img src="img/74.gif" alt="">
+        <img src="img/75.gif" alt="">
+        <img src="img/76.gif" alt="">
+        <img src="img/77.gif" alt="">
+        </div>
+    </div>
+    <div class="sample3">
+       <h1>3차 완성 꾹꾹이</h1>
+       <div class="img_all">
+        <img src="img/78.gif" alt="">
+        <img src="img/79.gif" alt="">
+        <img src="img/80.gif" alt="">
+        <img src="img/81.gif" alt="">
+        <img src="img/82.gif" alt="">
+        <img src="img/83.gif" alt="">
+        <img src="img/84.gif" alt="">
+        <img src="img/85.gif" alt="">
         </div>
     </div>
 </article>
