--- a/index.html
+++ b/index.html
@@ -117,6 +117,17 @@
         <img src="img/83.gif" alt="">
         <img src="img/84.gif" alt="">
         <img src="img/85.gif" alt="">
+        <img src="img/86.gif" alt="">
+        <img src="img/87.gif" alt="">
+        <img src="img/88.gif" alt="">
+        <img src="img/89.gif" alt="">
+        <img src="img/90.gif" alt="">
+        <img src="img/91.gif" alt="">
+        <img src="img/92.gif" alt="">
+        <img src="img/93.gif" alt="">
+        <img src="img/94.gif" alt="">
+        <img src="img/95.gif" alt="">
+        <img src="img/96.gif" alt="">
         </div>
     </div>
 </article>
