--- a/index.html
+++ b/index.html
@@ -147,6 +147,9 @@
         <img src="img/113.gif" alt="">
         <img src="img/114.gif" alt="">
         <img src="img/115.gif" alt="">
+        <img src="img/116.gif" alt="">
+        <img src="img/117.gif" alt="">
+        <img src="img/118.gif" alt="">
         </div>
     </div>
 </article>
